@@ -1,0 +1,77 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tryton>
+    <data>
+        <record model="ir.ui.view" id="stock_configuration_view_form">
+            <field name="model">stock.configuration</field>
+            <field name="type">form</field>
+            <field name="arch" type="xml">
+                <![CDATA[
+                <form string="Stock Configuration">
+                    <label name="shipment_in_sequence"/>
+                    <field name="shipment_in_sequence"/>
+                    <label name="shipment_in_return_sequence"/>
+                    <field name="shipment_in_return_sequence"/>
+                    <label name="shipment_out_sequence"/>
+                    <field name="shipment_out_sequence"/>
+                    <label name="shipment_out_return_sequence"/>
+                    <field name="shipment_out_return_sequence"/>
+                    <label name="shipment_internal_sequence"/>
+                    <field name="shipment_internal_sequence"/>
+                </form>
+                ]]>
+            </field>
+        </record>
+        <record model="ir.action.act_window" id="act_stock_configuration_form">
+            <field name="name">Stock Configuration</field>
+            <field name="res_model">stock.configuration</field>
+            <field name="view_type">form</field>
+        </record>
+        <record model="ir.action.act_window.view"
+            id="act_stock_configuration_view1">
+            <field name="sequence" eval="1"/>
+            <field name="view" ref="stock_configuration_view_form"/>
+            <field name="act_window" ref="act_stock_configuration_form"/>
+        </record>
+        <menuitem parent="menu_configuration"
+            action="act_stock_configuration_form"
+            id="menu_stock_configuration"/>
+
+        <record model="ir.property" id="property_shipment_in_sequence">
+            <field name="name">shipment_in_sequence</field>
+            <field name="field"
+                search="[('model.model', '=', 'stock.configuration'), ('name', '=', 'shipment_in_sequence')]"/>
+            <field name="value" eval="'ir.sequence,' + str(ref('sequence_shipment_in'))"/>
+        </record>
+
+        <record model="ir.property" id="property_shipment_in_return_sequence">
+            <field name="name">shipment_int_return_sequence</field>
+            <field name="field"
+                search="[('model.model', '=', 'stock.configuration'), ('name', '=', 'shipment_in_return_sequence')]"/>
+            <field name="value" eval="'ir.sequence,' + str(ref('sequence_shipment_in_return'))"/>
+        </record>
+
+        <record model="ir.property" id="property_shipment_out_sequence">
+            <field name="name">shipment_out_sequence</field>
+            <field name="field"
+                search="[('model.model', '=', 'stock.configuration'), ('name', '=', 'shipment_out_sequence')]"/>
+            <field name="value" eval="'ir.sequence,' + str(ref('sequence_shipment_out'))"/>
+        </record>
+
+        <record model="ir.property" id="property_shipment_out_return_sequence">
+            <field name="name">shipment_out_return_sequence</field>
+            <field name="field"
+                search="[('model.model', '=', 'stock.configuration'), ('name', '=', 'shipment_out_return_sequence')]"/>
+            <field name="value" eval="'ir.sequence,' + str(ref('sequence_shipment_out_return'))"/>
+        </record>
+
+        <record model="ir.property" id="property_shipment_internal_sequence">
+            <field name="name">shipment_internal_sequence</field>
+            <field name="field"
+                search="[('model.model', '=', 'stock.configuration'), ('name', '=', 'shipment_internal_sequence')]"/>
+            <field name="value" eval="'ir.sequence,' + str(ref('sequence_shipment_internal'))"/>
+        </record>
+
+    </data>
+</tryton>
