@@ -80,7 +80,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="view" ref="location_view_form"/>
             <field name="act_window" ref="act_location_form"/>
         </record>
-        <menuitem parent="menu_configuration" sequence="1"
+        <menuitem parent="menu_configuration" sequence="10"
             action="act_location_form" id="menu_location_form"/>
 
         <record model="ir.action.act_window" id="act_product_by_location">
